2008-02-21 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSCache.h:
	* GSCache.m:
	Improve handling of case when delegate asks for an item to be kept...
	changes the delegat callback methoid to include lifetime information.
	Make the cache thread-safe.

2008-01-31 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSCache.h:
	* GSCache.m:
	Make cache keys 'id' rather than 'NSString*' as they can actually be
	any copyable object.

2007-12-08 Richard Frith-Macdonald  <rfm@gnu.org>

	* GNUmakefile: bump subminor version for release
	* GSThroughput.m: ([-description]) output information for periods
	from last cycle as well as current cycle.

2007-09-14 Richard Frith-Macdonald  <rfm@gnu.org>

	Update to LGPL3

2007-05-30  Richard Frith-Macdonald  <rfm@gnu.org>

	* GSTicker.m: Ensure tick is current before calling -newSecond:

2007-04-01  Richard Frith-Macdonald  <rfm@gnu.org>

	* GSCache.m:
	* GSThroughput.m:
	* GSSkipMutableArray.m:
	* GSTicker.m:
	Changes to avoid compiler warnings on MacOS-X
	Improvements to calculations for size of instances for cache.

2006-11-11  Matt Rice <ratmice@gmail.com>

	* GSMutableSkipArray.m: Fix bug when deallocating an empty list.

2006-11-11  Richard Frith-Macdonald  <rfm@gnu.org>

	* GSThroughput.h: New ([add:duration:]) method.
	* GSThroughput.m: Method to add multiple events with a total
	duration (eg where recording individual event times has too
	high an overhead).

2006-11-09  Richard Frith-Macdonald  <rfm@gnu.org>

	* GNUmakefile: update version
	* GSThroughput.m: Allow use to keep running totals of stats

2006-09-27  Richard Frith-Macdonald  <rfm@gnu.org>

	* GNUmakefile:
	* GSIndexedSkipList.m:
	* GSSkipMutableArray.h:
	* GSSkipMutableArray.m:
	Minor fix to (hopefully) build on windows.
	Hide implementation details.
	Add convenience method (to create skiplist) to NSMutableArray.
	Some reformatting for coding standards.
	* Performance.h: Ad new header for skip lists.

2006-09-27  Matt Rice <ratmice@yahoo.com>
	